--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
     <div class="my-5">
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
-          <img class="profile-img mt-5" src="./Images/Gwynne.png" alt="photo of author">
+          <img class="profile-img mt-5" src="./Gwynne.png" alt="photo of author">
         </div>
 
         <div class="container">
           <div class="row">
             <div class="col-lg-3-col-sm-12">
-              <img src="./images/BananaMuffins.jpg" alt="banana muffins" height="300">
+              <img src="./BananaMuffins.jpg" alt="banana muffins" height="300">
             </div>
             <div class="col-lg-3-col-sm-12">
-              <img src="./images/CowboyCookie.jpg" alt="cowboy cookie" height="300">
+              <img src="./CowboyCookie.jpg" alt="cowboy cookie" height="300">
             </div>
             <div class="col-lg-3-col-sm-12">
-              <img src="./images/Lemon.jpg" alt="lemon squares" height="300">
+              <img src="./Lemon.jpg" alt="lemon squares" height="300">
             </div>
             <div class="col-lg-3-col-sm-12">
-              <img src="./images/TwixCheesecake.jpg" alt="twix cheesecake" height="300">
+              <img src="./TwixCheesecake.jpg" alt="twix cheesecake" height="300">
             </div>
           </div>
         </div>
