--- a/index.html
+++ b/index.html
@@ -1,122 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gwynne's Goodies</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-</head>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Smooth scroll */
+    html {
+      scroll-behavior: smooth;
+    }
 
+    /* Hero section */
+    .hero {
+      background: url('images/hero.jpg') center/cover no-repeat;
+      color: white;
+      text-align: center;
+      padding: 8rem 1rem;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    }
+    .hero p {
+      font-size: 1.3rem;
+      margin-top: 1rem;
+    }
+
+    /* Playful Recipes section */
+    .clever-section {
+      background: #fff7f7;
+      border-top: 4px dashed #f28b82;
+      border-bottom: 4px dashed #f28b82;
+      padding: 4rem 1rem;
+      animation: bounceIn 1s ease;
+    }
+    .clever-section h2 {
+      color: #e63946;
+      font-size: 2.2rem;
+    }
+    .clever-section p {
+      max-width: 600px;
+      margin: 0 auto 1rem;
+      font-size: 1.15rem;
+    }
+    .recipe-emoji {
+      font-size: 2rem;
+      display: inline-block;
+      margin: 0 0.5rem;
+      animation: bounce 2s infinite;
+    }
+    .recipe-emoji:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+    .recipe-emoji:nth-child(3) {
+      animation-delay: 0.6s;
+    }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+      40% { transform: translateY(-12px); }
+      60% { transform: translateY(-6px); }
+    }
+    @keyframes bounceIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    /* Footer */
+    footer {
+      background: #f28b82;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 1rem;
+    }
+  </style>
+</head>
 <body>
 
-  <!-- Header -->
-  <header class="py-3 text-center border-bottom bg-white">
-    <h1 class="fw-bold logo">Gwynne's Goodies</h1>
-    <nav class="nav justify-content-center mt-2">
-      <a class="nav-link text-dark" href="#">Home</a>
-      <a class="nav-link text-dark" href="#">Recipes</a>
-      <a class="nav-link text-dark" href="/about/">About</a>
-      <a class="nav-link text-dark" href="#contact">Contact</a>
-    </nav>
-  </header>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Gwynne's Goodies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#recipes">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- Hero -->
-  <section class="hero d-flex align-items-center justify-content-center text-center text-white">
-    <div>
-      <h2 class="display-4 fw-bold">Delicious Treats, Made with Love</h2>
-      <p class="lead">Cookies, cakes, and sweets for every occasion</p>
-      <a href="#features" class="btn btn-lg btn-light rounded-pill px-4 mt-3">Shop Now</a>
+  <section class="hero">
+    <div class="container">
+      <h1>Sweet Treats, Baked with Love</h1>
+      <p>Welcome to Gwynne’s Goodies — homemade happiness in every bite.</p>
     </div>
   </section>
 
-  <!-- Features -->
-  <section id="features" class="py-5 container text-center">
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="p-4 bg-white shadow-sm rounded-4 h-100">
-          <div class="mb-3 fs-1">🍪</div>
-          <h3 class="fw-semibold">Tried & True Recipes</h3>
-          <p>Step-by-step instructions for baking success.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-4 bg-white shadow-sm rounded-4 h-100">
-          <div class="mb-3 fs-1">🎂</div>
-          <h3 class="fw-semibold">Sweets for Any Occasion</h3>
-          <p>Perfect for birthdays, holidays, and celebrations.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-4 bg-white shadow-sm rounded-4 h-100">
-          <div class="mb-3 fs-1">🥧</div>
-          <h3 class="fw-semibold">Variety of Choices</h3>
-          <p>Cakes, pies, cookies — there’s something for everyone.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Product Gallery -->
-  <section id="gallery" class="py-5 bg-light">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-4">Our Favorites</h2>
-      <div class="row g-4">
-        <div class="col-sm-6 col-lg-3">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="./BananaMuffins.jpg" class="card-img-top rounded-top-4" alt="Banana Muffins">
-            <div class="card-body">
-              <h5 class="card-title">Banana Muffins</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="./CowboyCookie.jpg" class="card-img-top rounded-top-4" alt="Cowboy Cookie">
-            <div class="card-body">
-              <h5 class="card-title">Cowboy Cookie</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="./Lemon.jpg" class="card-img-top rounded-top-4" alt="Lemon Squares">
-            <div class="card-body">
-              <h5 class="card-title">Lemon Squares</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <div class="card h-100 shadow-sm border-0 rounded-4">
-            <img src="./TwixCheesecake.jpg" class="card-img-top rounded-top-4" alt="Twix Cheesecake">
-            <div class="card-body">
-              <h5 class="card-title">Twix Cheesecake</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- About / Testimonial -->
+  <!-- About -->
   <section id="about" class="py-5 text-center">
     <div class="container">
-      <img class="rounded-circle mb-3" src="./Gwynne.png" alt="Photo of Gwynne" width="160" height="160">
-      <h3 class="fw-semibold">Hi, I’m Gwynne</h3>
-      <p class="lead">Baking has always been my passion — I love creating treats that bring joy to every table.</p>
+      <h2 class="fw-bold mb-3">About Me</h2>
+      <p class="lead">Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
+    </div>
+  </section>
+
+  <!-- Menu -->
+  <section id="menu" class="py-5 bg-light text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Menu</h2>
+      <p class="lead">Cookies, brownies, cakes, and more — baked fresh just for you.</p>
+      <!-- Example product cards -->
+      <div class="row mt-4">
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/cookies.jpg" class="card-img-top" alt="Cookies">
+            <div class="card-body">
+              <h5 class="card-title">Classic Cookies</h5>
+              <p class="card-text">Chewy, gooey, and impossible to eat just one.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/brownies.jpg" class="card-img-top" alt="Brownies">
+            <div class="card-body">
+              <h5 class="card-title">Fudgy Brownies</h5>
+              <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm h-100">
+            <img src="images/cake.jpg" class="card-img-top" alt="Cake">
+            <div class="card-body">
+              <h5 class="card-title">Custom Cakes</h5>
+              <p class="card-text">Celebrations are sweeter with a personal touch.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Recipes (playful) -->
+  <section id="recipes" class="clever-section text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Recipes? 🍪</h2>
+      <p class="lead">Nice try… the family secrets stay in the vault. 🔒😉</p>
+      <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
+      <div class="mt-4">
+        <span class="recipe-emoji">🥧</span>
+        <span class="recipe-emoji">🍰</span>
+        <span class="recipe-emoji">🍪</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="py-5 text-center">
+    <div class="container">
+      <h2 class="fw-bold mb-3">Contact</h2>
+      <p class="lead">Got a craving or a celebration coming up? Let’s talk goodies!</p>
+      <p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer id="contact" class="bg-dark text-white text-center py-4">
-    <p class="mb-2">© 2025 Gwynne's Goodies</p>
-    <div>
-      <a href="#" class="text-white me-3">Instagram</a>
-      <a href="#" class="text-white">Facebook</a>
-    </div>
+  <footer>
+    <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
