--- a/index.html
+++ b/index.html
@@ -1,96 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gwynne's Goodies</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Smooth scroll */
-    html {
-      scroll-behavior: smooth;
-    }
 
-    /* Hero section */
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Optional: your existing stylesheet -->
+  <link rel="stylesheet" href="./style.css" />
+
+  <style>
+    html { scroll-behavior: smooth; }
+
+    /* Navbar */
+    .navbar-brand { font-weight: 700; }
+
+    /* Hero uses your existing image */
     .hero {
-      background: url('images/hero.jpg') center/cover no-repeat;
-      color: white;
+      background: linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.35)), url('./PBPie2.jpg') center/cover no-repeat;
+      color: #fff;
       text-align: center;
       padding: 8rem 1rem;
     }
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: bold;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
-    }
-    .hero p {
-      font-size: 1.3rem;
-      margin-top: 1rem;
-    }
+    .hero h1 { font-size: 3rem; font-weight: 800; text-shadow: 0 2px 10px rgba(0,0,0,.35); }
+    .hero p  { font-size: 1.2rem; margin-top: .5rem; }
 
-    /* Playful Recipes section */
-    .clever-section {
-      background: #fff7f7;
-      border-top: 4px dashed #f28b82;
-      border-bottom: 4px dashed #f28b82;
-      padding: 4rem 1rem;
-      animation: bounceIn 1s ease;
-    }
-    .clever-section h2 {
-      color: #e63946;
-      font-size: 2.2rem;
-    }
-    .clever-section p {
-      max-width: 600px;
-      margin: 0 auto 1rem;
-      font-size: 1.15rem;
-    }
-    .recipe-emoji {
-      font-size: 2rem;
-      display: inline-block;
-      margin: 0 0.5rem;
-      animation: bounce 2s infinite;
-    }
-    .recipe-emoji:nth-child(2) {
-      animation-delay: 0.3s;
-    }
-    .recipe-emoji:nth-child(3) {
-      animation-delay: 0.6s;
-    }
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-      40% { transform: translateY(-12px); }
-      60% { transform: translateY(-6px); }
-    }
-    @keyframes bounceIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
+    /* Cards use your four existing images */
+    .goodies-card img { height: 240px; object-fit: cover; }
 
     /* Footer */
-    footer {
-      background: #f28b82;
-      color: white;
-      text-align: center;
-      padding: 1.5rem 1rem;
-    }
+    footer { background: #f28b82; color: #fff; text-align: center; padding: 1.5rem 1rem; }
   </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
+  <nav class="navbar navbar-expand-lg bg-light sticky-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Gwynne's Goodies</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <a class="navbar-brand" href="/">Gwynne's Goodies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#recipes">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="recipes/">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -100,67 +57,67 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1>Sweet Treats, Baked with Love</h1>
-      <p>Welcome to Gwynne’s Goodies — homemade happiness in every bite.</p>
+      <h1>Sweet treats baked with love</h1>
+      <p>Homemade happiness in every bite</p>
+      <a href="#menu" class="btn btn-light btn-lg rounded-pill mt-3">See the menu</a>
     </div>
   </section>
 
   <!-- About -->
   <section id="about" class="py-5 text-center">
     <div class="container">
-      <h2 class="fw-bold mb-3">About Me</h2>
-      <p class="lead">Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
+      <img src="./Gwynne.png" alt="Photo of Gwynne" width="140" height="140" class="rounded-circle mb-3" />
+      <h2 class="fw-bold">Hi I am Gwynne</h2>
+      <p class="lead">Baker and lover of all things sweet. I share my favourite goodies with friends family and you.</p>
     </div>
   </section>
 
-  <!-- Menu -->
+  <!-- Menu using your existing images -->
   <section id="menu" class="py-5 bg-light text-center">
     <div class="container">
       <h2 class="fw-bold mb-3">Menu</h2>
-      <p class="lead">Cookies, brownies, cakes, and more — baked fresh just for you.</p>
-      <!-- Example product cards -->
-      <div class="row mt-4">
-        <div class="col-md-4 mb-4">
-          <div class="card shadow-sm h-100">
-            <img src="images/cookies.jpg" class="card-img-top" alt="Cookies">
-            <div class="card-body">
-              <h5 class="card-title">Classic Cookies</h5>
-              <p class="card-text">Chewy, gooey, and impossible to eat just one.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card shadow-sm h-100">
-            <img src="images/brownies.jpg" class="card-img-top" alt="Brownies">
-            <div class="card-body">
-              <h5 class="card-title">Fudgy Brownies</h5>
-              <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card shadow-sm h-100">
-            <img src="images/cake.jpg" class="card-img-top" alt="Cake">
-            <div class="card-body">
-              <h5 class="card-title">Custom Cakes</h5>
-              <p class="card-text">Celebrations are sweeter with a personal touch.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+      <p class="lead">Cookies brownies cakes and more baked fresh for you</p>
 
-  <!-- Recipes (playful) -->
-  <section id="recipes" class="clever-section text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-3">Recipes? 🍪</h2>
-      <p class="lead">Nice try… the family secrets stay in the vault. 🔒😉</p>
-      <p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
-      <div class="mt-4">
-        <span class="recipe-emoji">🥧</span>
-        <span class="recipe-emoji">🍰</span>
-        <span class="recipe-emoji">🍪</span>
+      <div class="row mt-4">
+        <div class="col-md-3 mb-4">
+          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
+            <img src="./BananaMuffins.jpg" class="card-img-top rounded-top-4" alt="Banana Muffins" />
+            <div class="card-body">
+              <h5 class="card-title">Banana muffins</h5>
+              <p class="card-text">Soft and fragrant with a tender crumb</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
+            <img src="./CowboyCookie.jpg" class="card-img-top rounded-top-4" alt="Cowboy Cookie" />
+            <div class="card-body">
+              <h5 class="card-title">Cowboy cookie</h5>
+              <p class="card-text">Chunky chewy and full of fun</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
+            <img src="./Lemon.jpg" class="card-img-top rounded-top-4" alt="Lemon Squares" />
+            <div class="card-body">
+              <h5 class="card-title">Lemon squares</h5>
+              <p class="card-text">Bright citrus with a buttery base</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mb-4">
+          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
+            <img src="./TwixCheesecake.jpg" class="card-img-top rounded-top-4" alt="Twix Cheesecake" />
+            <div class="card-body">
+              <h5 class="card-title">Twix cheesecake</h5>
+              <p class="card-text">Creamy chocolate caramel bliss</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -169,14 +126,14 @@
   <section id="contact" class="py-5 text-center">
     <div class="container">
       <h2 class="fw-bold mb-3">Contact</h2>
-      <p class="lead">Got a craving or a celebration coming up? Let’s talk goodies!</p>
-      <p>Email: <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
+      <p class="lead">Craving something or planning a celebration</p>
+      <p>Email <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney.</p>
+    <p>&copy; 2025 Gwynne's Goodies</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
