--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,64 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Recipes • Gwynne's Goodies</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recipes | Gwynne's Goodies</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    :root { --pink:#f28b82; }
-    html, body { height: 100%; }
     body {
-      display: grid;
-      place-items: center;
+      background: #fff7f7;
+      font-family: 'Helvetica Neue', sans-serif;
       text-align: center;
-      background:
-        radial-gradient(ellipse at top, rgba(0,0,0,.05), transparent 60%),
-        #fff;
-      padding: 2rem;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      padding: 5rem 1rem;
     }
-    .card {
-      max-width: 720px;
-      border: 0;
-      border-radius: 24px;
-      box-shadow: 0 12px 30px rgba(0,0,0,.08);
-      padding: 3rem 2rem;
-    }
-    h1 { font-weight: 800; margin-bottom: .5rem; }
-    .lead { font-size: 1.25rem; }
-    .pill {
-      display: inline-block;
-      background: var(--pink);
-      color: #fff;
-      border-radius: 999px;
-      padding: .5rem 1rem;
-      font-weight: 700;
+    h1 {
+      color: #e63946;
+      font-size: 2.5rem;
       margin-bottom: 1rem;
+      animation: bounceIn 1s ease;
     }
-    .emoji { font-size: 2rem; display: inline-block; margin: 0 .25rem; animation: bounce 2s infinite; }
-    .emoji:nth-child(2) { animation-delay: .2s; }
-    .emoji:nth-child(3) { animation-delay: .4s; }
+    p {
+      max-width: 600px;
+      margin: 0 auto 1rem;
+      font-size: 1.2rem;
+      color: #333;
+    }
+    .recipe-emoji {
+      font-size: 2.2rem;
+      display: inline-block;
+      margin: 0 0.5rem;
+      animation: bounce 2s infinite;
+    }
+    .recipe-emoji:nth-child(2) {
+      animation-delay: 0.3s;
+    }
+    .recipe-emoji:nth-child(3) {
+      animation-delay: 0.6s;
+    }
     @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-      40% { transform: translateY(-12px); }
-      60% { transform: translateY(-6px); }
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-12px);
+      }
+      60% {
+        transform: translateY(-6px);
+      }
     }
-    .btn-outline-dark { border-radius: 999px; }
+    @keyframes bounceIn {
+      from {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+    a.back-home {
+      display: inline-block;
+      margin-top: 2rem;
+      text-decoration: none;
+      background: #e63946;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 50px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    a.back-home:hover {
+      background: #d62828;
+    }
   </style>
 </head>
 <body>
-  <main class="card">
-    <div class="pill">Recipes</div>
-    <h1>Nice try</h1>
-    <p class="lead">Family secrets stay in the vault</p>
-    <p>Here is a freebie. Step one preheat oven. Step two call Gwynne. Step three enjoy delicious goodies.</p>
-    <p>
-      <span class="emoji">🥧</span>
-      <span class="emoji">🍰</span>
-      <span class="emoji">🍪</span>
-    </p>
-    <a href="/" class="btn btn-outline-dark mt-2">Back to home</a>
-  </main>
+
+  <h1>Recipes? 🍪</h1>
+  <p>Nice try… but the family secrets stay locked in the cookie vault. 🔒😉</p>
+  <p>Here’s a freebie though:  
+     <br>Step 1 — Preheat oven  
+     <br>Step 2 — Call Gwynne  
+     <br>Step 3 — Enjoy delicious goodies 🎂</p>
+
+  <div class="mt-4">
+    <span class="recipe-emoji">🥧</span>
+    <span class="recipe-emoji">🍰</span>
+    <span class="recipe-emoji">🍪</span>
+  </div>
+
+  <a class="back-home" href="/">← Back to Home</a>
+
 </body>
 </html>
