--- a/index.html
+++ b/index.html
@@ -1,141 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gwynne's Goodies</title>
-
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Optional: your existing stylesheet -->
-  <link rel="stylesheet" href="./style.css" />
-
-  <style>
-    html { scroll-behavior: smooth; }
-
-    /* Navbar */
-    .navbar-brand { font-weight: 700; }
-
-    /* Hero uses your existing image */
-    .hero {
-      background: linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.35)), url('./PBPie2.jpg') center/cover no-repeat;
-      color: #fff;
-      text-align: center;
-      padding: 8rem 1rem;
-    }
-    .hero h1 { font-size: 3rem; font-weight: 800; text-shadow: 0 2px 10px rgba(0,0,0,.35); }
-    .hero p  { font-size: 1.2rem; margin-top: .5rem; }
-
-    /* Cards use your four existing images */
-    .goodies-card img { height: 240px; object-fit: cover; }
-
-    /* Footer */
-    footer { background: #f28b82; color: #fff; text-align: center; padding: 1.5rem 1rem; }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-light sticky-top shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Gwynne's Goodies</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+      <a class="navbar-brand fw-bold text-danger" href="/">Gwynne's Goodies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="nav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="recipes/">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/recipes/">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero -->
-  <section class="hero">
+  <!-- Hero Section -->
+  <header class="bg-light text-center py-5">
     <div class="container">
-      <h1>Sweet treats baked with love</h1>
-      <p>Homemade happiness in every bite</p>
-      <a href="#menu" class="btn btn-light btn-lg rounded-pill mt-3">See the menu</a>
+      <h1 class="display-4 fw-bold text-danger">Welcome to Gwynne's Goodies</h1>
+      <p class="lead">Delicious homemade treats baked with love ❤️</p>
+      <a href="#about" class="btn btn-danger btn-lg mt-3">Learn More</a>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="py-5">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4">About Us</h2>
+      <p class="lead">At Gwynne's Goodies, every cookie, cake, and treat is baked with passion and a sprinkle of joy. Perfect for gifts, celebrations, or a little indulgence for yourself.</p>
     </div>
   </section>
 
-  <!-- About -->
-  <section id="about" class="py-5 text-center">
-    <div class="container">
-      <img src="./Gwynne.png" alt="Photo of Gwynne" width="140" height="140" class="rounded-circle mb-3" />
-      <h2 class="fw-bold">Hi I am Gwynne</h2>
-      <p class="lead">Baker and lover of all things sweet. I share my favourite goodies with friends family and you.</p>
-    </div>
-  </section>
-
-  <!-- Menu using your existing images -->
-  <section id="menu" class="py-5 bg-light text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-3">Menu</h2>
-      <p class="lead">Cookies brownies cakes and more baked fresh for you</p>
-
-      <div class="row mt-4">
-        <div class="col-md-3 mb-4">
-          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
-            <img src="./BananaMuffins.jpg" class="card-img-top rounded-top-4" alt="Banana Muffins" />
-            <div class="card-body">
-              <h5 class="card-title">Banana muffins</h5>
-              <p class="card-text">Soft and fragrant with a tender crumb</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3 mb-4">
-          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
-            <img src="./CowboyCookie.jpg" class="card-img-top rounded-top-4" alt="Cowboy Cookie" />
-            <div class="card-body">
-              <h5 class="card-title">Cowboy cookie</h5>
-              <p class="card-text">Chunky chewy and full of fun</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3 mb-4">
-          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
-            <img src="./Lemon.jpg" class="card-img-top rounded-top-4" alt="Lemon Squares" />
-            <div class="card-body">
-              <h5 class="card-title">Lemon squares</h5>
-              <p class="card-text">Bright citrus with a buttery base</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3 mb-4">
-          <div class="card goodies-card shadow-sm h-100 border-0 rounded-4">
-            <img src="./TwixCheesecake.jpg" class="card-img-top rounded-top-4" alt="Twix Cheesecake" />
-            <div class="card-body">
-              <h5 class="card-title">Twix cheesecake</h5>
-              <p class="card-text">Creamy chocolate caramel bliss</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="py-5 text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-3">Contact</h2>
-      <p class="lead">Craving something or planning a celebration</p>
-      <p>Email <a href="mailto:hello@gwynnesgoodies.com">hello@gwynnesgoodies.com</a></p>
+  <!-- Contact Section -->
+  <section id="contact" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="fw-bold mb-4">Contact</h2>
+      <p class="lead">Want to place an order or ask a question? Reach out and let's make something sweet together.</p>
+      <a href="mailto:gwynne@example.com" class="btn btn-danger btn-lg">Email Me</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Gwynne's Goodies</p>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 Gwynne's Goodies. All rights reserved.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
