--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <style>
-    /* Modern playful style updates */
+    /* Modern playful overrides */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #fff8f0;
       color: #42210b;
-    }
-
-    .gradient-background {
-      background: linear-gradient(135deg, #ffecdf, #ffe4d6);
     }
 
     h1, h2, h3 {
@@ -41,10 +37,6 @@
     .btn-light:hover, .btn-outline-light:hover {
       opacity: 0.85;
       transition: 0.3s;
-    }
-
-    .icon-square {
-      font-size: 2rem;
     }
 
     .img-fluid {
@@ -88,7 +80,7 @@
     </div>
   </nav>
 
-  <!-- Hero / Title Section -->
+  <!-- Hero Section -->
   <section id="title" class="gradient-background py-5 text-center">
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
@@ -107,7 +99,7 @@
     </div>
   </section>
 
-  <!-- Features / Menu Section -->
+  <!-- Features Section -->
   <section id="features" class="py-5 text-center">
     <div class="container mt-5">
       <div class="row g-4 py-5 row-cols-1 row-cols-md-3">
@@ -130,7 +122,7 @@
     </div>
   </section>
 
-  <!-- Gallery / Testimonials -->
+  <!-- Gallery Section -->
   <section id="testimonial" class="py-5 text-center">
     <div class="container">
       <div class="row g-4 justify-content-center">
