--- a/index.html
+++ b/index.html
@@ -8,52 +8,43 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <style>
-    /* Modern playful overrides */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #fff8f0;
       color: #42210b;
     }
-
     h1, h2, h3 {
       font-family: 'Fredoka One', cursive;
       color: #a63c00;
     }
-
     .btn-light {
       background-color: #ffd6a5;
       color: #42210b;
       font-weight: bold;
       border-radius: 12px;
     }
-
     .btn-outline-light {
       border-color: #42210b;
       color: #42210b;
       font-weight: bold;
       border-radius: 12px;
     }
-
     .btn-light:hover, .btn-outline-light:hover {
       opacity: 0.85;
       transition: 0.3s;
     }
-
     .img-fluid {
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
     }
-
     footer {
       background-color: #ffe4d6;
       color: #42210b;
     }
-
     footer a {
       color: #42210b;
       text-decoration: none;
     }
-
     footer a:hover {
       text-decoration: underline;
     }
@@ -61,7 +52,6 @@
 </head>
 
 <body>
-
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light shadow-sm">
     <div class="container">
@@ -123,20 +113,14 @@
   </section>
 
   <!-- Gallery Section -->
-  <section id="testimonial" class="py-5 text-center">
+  <section id="gallery" class="py-5 text-center">
     <div class="container">
       <div class="row g-4 justify-content-center">
         <div class="col-lg-3 col-sm-6">
           <img src="./BananaMuffins.jpg" alt="Banana Muffins" class="img-fluid">
         </div>
         <div class="col-lg-3 col-sm-6">
-          <img src="./CowboyCookie.jpg" alt="Cowboy Cookie" class="img-fluid">
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <img src="./Lemon.jpg" alt="Lemon Squares" class="img-fluid">
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <img src="./TwixCheesecake.jpg" alt="Twix Cheesecake" class="img-fluid">
+          <img src="./CookieDough.JPG" alt="Cookie Dough" class="img-fluid">
         </div>
       </div>
     </div>
