--- a/about/index.html
+++ b/about/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Gwynne's Goodies</title>
-  <link rel="stylesheet" href="/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>About - Gwynne's Goodies</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; }
+h1 { font-family: 'Pacifico', cursive; color: #e63946; text-align: center; margin: 2rem 0; }
+p { max-width: 700px; margin: 1rem auto; text-align: center; font-size: 1.15rem; }
+a { color: #e63946; text-decoration: underline; }
+</style>
 </head>
 <body>
-  <section style="padding: 2rem;">
-    <h1>About Gwynne's Goodies</h1>
-    <p>We bake AI into every batch. 🍪</p>
-    <a href="/">← Back to Home</a>
-  </section>
+<h1>About Me</h1>
+<p>Hi, I’m Gwynne — baker, dreamer, and lover of all things sweet. I started Gwynne’s Goodies to share my favorite treats with friends, family, and now you!</p>
+<p><a href="../index.html">Back to Home</a></p>
 </body>
 </html>
