--- a/recipes/index.html
+++ b/recipes/index.html
@@ -12,6 +12,7 @@ body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; margin:0; }
 .navbar-brand { font-family: 'Pacifico', cursive; font-size: 1.8rem; color: #e63946 !important; }
 .nav-link { color: #e63946 !important; font-weight: 500; }
 .nav-link:hover { text-decoration: underline; }
+
 .hero { 
   background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../BananaMuffins.jpg') center/cover no-repeat; 
   text-align: center; color: white; padding: 6rem 1rem;
@@ -40,6 +41,7 @@ body { font-family: 'Roboto', sans-serif; background-color: #fffaf0; margin:0; }
 
 footer { background: #e63946; color: white; text-align: center; padding: 1.5rem 1rem; }
 footer a { color: white; text-decoration: underline; }
+
 </style>
 </head>
 <body>
@@ -54,7 +56,6 @@ footer a { color: white; text-decoration: underline; }
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#recipes">Recipes</a></li>
       </ul>
     </div>
   </div>
@@ -80,4 +81,9 @@ footer a { color: white; text-decoration: underline; }
 </section>
 
 <footer>
-  <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="../index
+  <p>&copy; 2025 Gwynne's Goodies. Baked with ❤️ in Sydney. <a href="../index.html">Home</a></p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
