--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body { font-family: Arial, sans-serif; background:#fffaf0; margin:0; }
 .nav-link { color:#e63946 !important; }
 .nav-link:hover { text-decoration:underline; }
 
-.hero { background: url('/BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:8rem 1rem; }
+.hero { background: url('BananaMuffins.jpg') center/cover no-repeat; text-align:center; color:white; padding:8rem 1rem; }
 .hero h1 { font-size:3rem; text-shadow:2px 2px 6px rgba(0,0,0,0.5); }
 .hero p { font-size:1.3rem; margin-top:1rem; }
 
@@ -34,15 +34,15 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 
 <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
 <div class="container">
-<a class="navbar-brand" href="/index.html">Gwynne's Goodies</a>
+<a class="navbar-brand" href="index.html">Gwynne's Goodies</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
 <ul class="navbar-nav ms-auto">
-<li class="nav-item"><a class="nav-link" href="/about/index.html">About</a></li>
+<li class="nav-item"><a class="nav-link" href="about/index.html">About</a></li>
 <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
-<li class="nav-item"><a class="nav-link" href="/recipes/index.html">Recipes</a></li>
+<li class="nav-item"><a class="nav-link" href="recipes/index.html">Recipes</a></li>
 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 </ul>
 </div>
@@ -63,7 +63,7 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 <div class="row mt-4">
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
-<img src="/CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
+<img src="CookieDough.JPG" class="card-img-top" alt="Classic Cookies">
 <div class="card-body">
 <h5 class="card-title">Classic Cookies</h5>
 <p class="card-text">Chewy, gooey, impossible to eat just one.</p>
@@ -72,7 +72,7 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 </div>
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
-<img src="/Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
+<img src="Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
 <div class="card-body">
 <h5 class="card-title">Fudgy Brownies</h5>
 <p class="card-text">Rich chocolate squares that melt in your mouth.</p>
@@ -81,7 +81,7 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 </div>
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
-<img src="/BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
+<img src="BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
 <div class="card-body">
 <h5 class="card-title">Custom Cakes</h5>
 <p class="card-text">Celebrations are sweeter with a personal touch.</p>
