--- a/index.html
+++ b/index.html
@@ -72,35 +72,22 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 </div>
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
-<img src="Brownies.jpg" class="card-img-top" alt="Fudgy Brownies">
+<img src="PBPie.jpg" class="card-img-top" alt="Peanut Butter Pie">
 <div class="card-body">
-<h5 class="card-title">Fudgy Brownies</h5>
-<p class="card-text">Rich chocolate squares that melt in your mouth.</p>
+<h5 class="card-title">Peanut Butter Pie</h5>
+<p class="card-text">Rich chocolatey PB pie that is a texture lovers dream.</p>
 </div>
 </div>
 </div>
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
-<img src="BananaMuffins.jpg" class="card-img-top" alt="Custom Cakes">
+<img src="BananaMuffins.jpg" class="card-img-top" alt="Custom Muffins">
 <div class="card-body">
-<h5 class="card-title">Custom Cakes</h5>
+<h5 class="card-title">Custom Muffins</h5>
 <p class="card-text">Celebrations are sweeter with a personal touch.</p>
 </div>
 </div>
 </div>
-</div>
-</div>
-</section>
-
-<section class="clever-section">
-<div class="container">
-<h2 class="section-title">Recipes? 🍪</h2>
-<p>Nice try… the family secrets stay in the vault. 🔒😉</p>
-<p>But here’s a freebie: Step 1 — preheat oven. Step 2 — call Gwynne. Step 3 — enjoy delicious goodies. 🎂</p>
-<div class="mt-4">
-<span class="recipe-emoji">🥧</span>
-<span class="recipe-emoji">🍰</span>
-<span class="recipe-emoji">🍪</span>
 </div>
 </div>
 </section>
