--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ footer { background:#e63946; color:white; text-align:center; padding:1.5rem 1rem
 <section id="menu" class="text-center py-5 bg-light">
 <div class="container">
 <h2 class="section-title">Menu</h2>
-<p>Cookies, brownies, cakes, and more — baked fresh just for you.</p>
+<p>Cookies, muffins, pies, and more — baked fresh just for you.</p>
 <div class="row mt-4">
 <div class="col-md-4 mb-4">
 <div class="card shadow-sm h-100">
